deployments/infra/mealie/mealie/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  replicas: 1
  template:
    metadata:
      name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v1.0.0-RC2
          ports:
            - containerPort: 9000
              name: web
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1000Mi
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
