deployments/infra/mealie/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  ports:
    - name: web
      protocol: TCP
      port: 9000
      targetPort: web
  type: ClusterIP
